feat: major changes, refactored UserService, TransactionService, View classes are deleted